--- a/static/style.css
+++ b/static/style.css
@@ -149,3 +149,13 @@ body{
     transition: opacity 1s ease-in-out;
     cursor: pointer;
 }
+.tasks-count{
+    display: block;
+    font-weight: 700;
+    font-size: 24px;
+    color: #B47AEA;
+    font-family: 'Inter', sans-serif;
+}
+.tasks-count span{
+    color: #5E5E5E;
+}
