--- a/static/style.css
+++ b/static/style.css
@@ -31,7 +31,6 @@ body{
     font-size: 60px;
     font-weight: bold;
     color: #5E5E5E;
-    margin-top: 20px;
 }
 .main-description{
     font-weight: 500;
@@ -93,7 +92,7 @@ body{
     cursor: pointer;
 }
 .task-remove img{
-    vertical-align: top;
+    vertical-align: baseline;
     transform: scale(1.2);
 }
 .completed{
